Router
Added new Parallelization Type